syntax = "proto3";
package model;
option go_package = ".;mall";

// 首页轮播广告表
message HomeAdvertise {
  uint64 id = 1; // 主键
  string name = 2; // 名称
  string pic = 3; // 图片地址
  string url = 4; // 链接地址
  uint32 sort = 5; // 排序
  string note = 6; // 备注
  // 类型
  uint32 type = 7; // 轮播位置：0->PC首页轮播；1->app首页轮播，注意：在proto中使用uint32代替uint8
  // 时间
  uint32 startTime = 8; // 开始时间
  uint32 endTime = 9; // 结束时间
  // 状态
  uint32 status = 10; // 上下线状态：0->下线；1->上线，注意：在proto中使用uint32代替uint8
  // 统计
  uint32 clickCount = 11; // 点击数
  uint32 orderCount = 12; // 下单数
}
